add api controller function

--- a/Ecommerce/src/main/resources/api-list.properties
+++ b/Ecommerce/src/main/resources/api-list.properties
@@ -1,3 +1,6 @@
+
+permission-list.permit-all=/api.myservice.com/v1/auth/sign-up,/api.myservice.com/v1/auth/sign-in,/api.myservice.com/v1/categories,/api.myservice.com/v1/products/search**,/api.myservice.com/v1/products,/api.myservice.com/v1/products/featured-products,/api.myservice.com/v1/products/new-products,/api.myservice.com/v1/products/best-seller-products,/api.myservice.com/v1/products/categories/**,/api.myservice.com/v1/products/**
+
 permission-list.admin=/api.myservice.com/v1/admin/**
-permission-list.permit-all=/api.myservice.com/v1/auth/sign-up,/api.myservice.com/v1/auth/sign-in
+
 permission-list.user=
