--- a/Ecommerce/src/main/resources/error-messages.properties
+++ b/Ecommerce/src/main/resources/error-messages.properties
@@ -5,21 +5,30 @@ EX-00-000=System exception
 EX-01-000=Request Exception
 
 # exception liên quán ??n response
-EX-02-000=Response Exception
+exception.response=Response Exception
+exception.response.DataNotFound=Data not found
 
 # exception liên quan ??n user
+exception.AuthenticationFailure=User has not permission
+exception.Jwt.TokenInvalid=JWT Token invalid !
 exception.UserNotFound=User not found !
 exception.UserExisted=User existed !
 exception.PhoneExisted=Phone number had signed !
 exception.PasswordNotSame=Password not same !
+exception.RoleTypeNotFound=Role not found!
+
 exception.database.AddUserRoleFailure=Can not add role to user !
 exception.database.UserOrPasswordIncorrect=User or password is incorrect !
 
-# exception liên quan ??n user
+# exception liên quan ??n phân trang
+exception.pageable.SortTypeError=Sort direction or field is not suitable !
+exception.pageable.PageNotFound=Can not find suitable page !
 
 #Success message
-register.success=Register successful !
+success.Register=Register successful !
+success.AddRole=Added permission success
+success.DeleteRole=Deleted permission success
 
 #Faile message
-FM-01-001=
+failure.DeleteRole=Fail to delete role !
 
