--- a/Ecommerce/src/main/resources/validator-en.properties
+++ b/Ecommerce/src/main/resources/validator-en.properties
@@ -6,4 +6,5 @@ message.NotNull=required
 message.UserNameFmt=do not contain special digits
 message.PhoneFmt=digits start with 0 and contains 10 numbers
 message.EmailFmt=must sam as email format: abc12345@abc.com
+message.Min-Qty=must at least 1
 
