add api controller function 240501

--- a/Ecommerce/src/main/resources/error-messages.properties
+++ b/Ecommerce/src/main/resources/error-messages.properties
@@ -20,6 +20,14 @@ exception.RoleTypeNotFound=Role not found!
 exception.database.AddUserRoleFailure=Can not add role to user !
 exception.database.UserOrPasswordIncorrect=User or password is incorrect !
 
+# exception liên quan ??n product
+exception.ProductNotFound=Product not found !
+exception.ProductExisted=Product existed !
+exception.database.CanNotAdd=Can not create new product !
+
+
+
+
 # exception liên quan ??n phân trang
 exception.pageable.SortTypeError=Sort direction or field is not suitable !
 exception.pageable.PageNotFound=Can not find suitable page !
