--- a/Ecommerce/src/main/resources/validator-en.properties
+++ b/Ecommerce/src/main/resources/validator-en.properties
@@ -7,4 +7,8 @@ message.UserNameFmt=do not contain special digits
 message.PhoneFmt=digits start with 0 and contains 10 numbers
 message.EmailFmt=must sam as email format: abc12345@abc.com
 message.Min-Qty=must at least 1
+message.Min-Price=must at least 0
+
+message.Min-Length-100=mut be less than 100 characters
+
 
