--- a/Ecommerce/src/main/resources/error-messages.properties
+++ b/Ecommerce/src/main/resources/error-messages.properties
@@ -25,7 +25,11 @@ exception.ProductNotFound=Product not found !
 exception.ProductExisted=Product existed !
 exception.database.CanNotAdd=Can not create new product !
 
+# exception liên quan ??n product
+exception.CategoryNotFound=Category not found !
 
+# exception liên quan ??n cart
+exception.CartNotFound=Cart is empty !
 
 
 # exception liên quan ??n phân trang
@@ -36,7 +40,13 @@ exception.pageable.PageNotFound=Can not find suitable page !
 success.Register=Register successful !
 success.AddRole=Added permission success
 success.DeleteRole=Deleted permission success
+success.DeleteProduct=Deleted product success
+success.DeleteCategory=Deleted category success
+success.DeleteCart=Deleted cart success
 
 #Faile message
 failure.DeleteRole=Fail to delete role !
+failure.AddToCart=Fail to add product to cart !
+failure.UpdateQtyToCart=Fail to change quantity of cart !
+failure.DeleteProductFromCart=Fail to delete product from cart !
 
