--- a/Ecommerce/src/main/resources/validator-en.properties
+++ b/Ecommerce/src/main/resources/validator-en.properties
@@ -9,6 +9,6 @@ message.EmailFmt=must sam as email format: abc12345@abc.com
 message.Min-Qty=must at least 1
 message.Min-Price=must at least 0
 
-message.Min-Length-100=mut be less than 100 characters
+message.Max-Length-100=mut be less than 100 characters
 
 
