add api order function 240507

--- a/Ecommerce/src/main/resources/error-messages.properties
+++ b/Ecommerce/src/main/resources/error-messages.properties
@@ -1,5 +1,5 @@
 # exception liên quan ??n h? th?ng
-EX-00-000=System exception
+exception.authentication.Unauthorized=UNAUTHORIZED
 
 # exception liên quan ??n request
 EX-01-000=Request Exception
@@ -31,6 +31,9 @@ exception.CategoryNotFound=Category not found !
 # exception liên quan ??n cart
 exception.CartNotFound=Cart is empty !
 
+# exception liên quan ??n cart
+exception.OrderNotFound=Order not found!
+exception.OrderCreatedFailure=Can not create order !
 
 # exception liên quan ??n phân trang
 exception.pageable.SortTypeError=Sort direction or field is not suitable !
