--- a/Ecommerce/src/main/resources/validator-en.properties
+++ b/Ecommerce/src/main/resources/validator-en.properties
@@ -8,7 +8,9 @@ message.PhoneFmt=digits start with 0 and contains 10 numbers
 message.EmailFmt=must sam as email format: abc12345@abc.com
 message.Min-Qty=must at least 1
 message.Min-Price=must at least 0
-
+exception.PasswordNotSame=Password confirm incorrect !
+message.Min-Length-6=mut be more than 6 characters
 message.Max-Length-100=mut be less than 100 characters
+
 
 
