--- a/Ecommerce/src/main/resources/application.yml
+++ b/Ecommerce/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 JwtToken:
     key: "JWT_SECRET_KEY_VU_THANH_TUNG_1721991"
-    expired-time: 7200000
+    expired-time: 720000
 
 
 spring:
@@ -11,9 +11,9 @@ spring:
         username: root
         password: tung@172
         url: jdbc:mysql://localhost:3306/ecommerce
+
     jpa:
         hibernate:
-            ddl-auto: update
             naming:
                 implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
                 physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
