add api order function 240507

--- a/Ecommerce/src/main/resources/application.yml
+++ b/Ecommerce/src/main/resources/application.yml
@@ -15,8 +15,8 @@ spring:
     jpa:
         hibernate:
             naming:
-                implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-                physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+                implicit-strategy: "org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl"
+                physical-strategy: "org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl"
         properties:
             hibernate:
                 current_session_context_class: org.springframework.orm.hibernate5.SpringSessionContext
