--- a/Ecommerce/src/main/resources/validator-en.properties
+++ b/Ecommerce/src/main/resources/validator-en.properties
@@ -12,5 +12,9 @@ exception.PasswordNotSame=Password confirm incorrect !
 message.Min-Length-6=mut be more than 6 characters
 message.Max-Length-100=mut be less than 100 characters
 
-
+exception.NumberType.Long=Long data type required
+exception.NumberType.Integer=Integer data type required
+exception.NumberType.Double=Integer data type required
+exception.NumberType.Float=Integer data type required
+exception.OrderStatus.NotMatch=OrderStatus does not existed
 
