--- a/Ecommerce/src/main/resources/api-list.properties
+++ b/Ecommerce/src/main/resources/api-list.properties
@@ -1,5 +1,5 @@
 
-permission-list.permit-all=/api.myservice.com/v1/auth/sign-up,/api.myservice.com/v1/auth/sign-in,/api.myservice.com/v1/categories,/api.myservice.com/v1/products/search**,/api.myservice.com/v1/products,/api.myservice.com/v1/products/featured-products,/api.myservice.com/v1/products/new-products,/api.myservice.com/v1/products/best-seller-products,/api.myservice.com/v1/products/categories/**,/api.myservice.com/v1/products/**
+permission-list.permit-all=/jwtException,/authException,/error,/api.myservice.com/v1/auth/sign-up,/api.myservice.com/v1/auth/sign-in,/api.myservice.com/v1/categories,/api.myservice.com/v1/products/search**,/api.myservice.com/v1/products,/api.myservice.com/v1/products/featured-products,/api.myservice.com/v1/products/new-products,/api.myservice.com/v1/products/best-seller-products,/api.myservice.com/v1/products/categories/**,/api.myservice.com/v1/products/**
 
 permission-list.admin=/api.myservice.com/v1/admin/**
 
