--- a/Ecommerce/src/main/resources/application.yml
+++ b/Ecommerce/src/main/resources/application.yml
@@ -11,7 +11,6 @@ spring:
         username: root
         password: tung@172
         url: jdbc:mysql://localhost:3306/ecommerce
-
     jpa:
         hibernate:
             naming:
@@ -37,9 +36,20 @@ spring:
             file-size-threshold: 10MB
 server:
     port: 8088
+    error:
+        whitelabel:
+            enabled: false
 logging:
     level:
         root: DEBUG
+    #        org:
+#            springframework:
+#                jdbc:
+#                    core: DEBUG
+#            hibernate:
+#                SQL: INFO
+    file:
+        name: logs/application.log
 
 
 upload:
