--- a/Ecommerce/src/main/resources/error-messages.properties
+++ b/Ecommerce/src/main/resources/error-messages.properties
@@ -35,21 +35,26 @@ exception.CartNotFound=Cart is empty !
 exception.OrderNotFound=Order not found!
 exception.OrderCreatedFailure=Can not create order !
 
+# exception liên quan ??n Address
+exception.AddressNotFound=Address not found!
+exception.AddressCreatedFailure=Can not create new address !
+exception.AddressDeletedFailure=Can not delete new address !
+
 # exception liên quan ??n phân trang
 exception.pageable.SortTypeError=Sort direction or field is not suitable !
 exception.pageable.PageNotFound=Can not find suitable page !
 
 #Success message
-success.Register=Register successful !
-success.AddRole=Added permission success
-success.DeleteRole=Deleted permission success
-success.DeleteProduct=Deleted product success
-success.DeleteCategory=Deleted category success
-success.DeleteCart=Deleted cart success
+success.Register= Registered successful !
+success.AddRole= Added permission success
+success.DeleteRole= Deleted permission success
+success.DeleteProduct= Deleted product success
+success.DeleteCategory= Deleted category success
+success.DeleteCart= Deleted address success
 
 #Faile message
-failure.DeleteRole=Fail to delete role !
-failure.AddToCart=Fail to add product to cart !
-failure.UpdateQtyToCart=Fail to change quantity of cart !
-failure.DeleteProductFromCart=Fail to delete product from cart !
+failure.DeleteRole= Fail to delete role !
+failure.AddToCart= Fail to add product to cart !
+failure.UpdateQtyToCart= Fail to change quantity of cart !
+failure.DeleteProductFromCart= Fail to delete product from cart !
 
