add api order function 240507

--- a/Ecommerce/src/main/resources/error-messages.properties
+++ b/Ecommerce/src/main/resources/error-messages.properties
@@ -16,6 +16,7 @@ exception.UserNotFound=User not found !
 exception.UserExisted=User existed !
 exception.PhoneExisted=Phone number had signed !
 exception.RoleTypeNotFound=Role not found!
+exception.PasswordIdNotSame=Password is incorrect !
 
 exception.database.AddUserRoleFailure=Can not add role to user !
 exception.database.UserOrPasswordIncorrect=User or password is incorrect !
@@ -51,10 +52,12 @@ success.DeleteRole= Deleted permission success
 success.DeleteProduct= Deleted product success
 success.DeleteCategory= Deleted category success
 success.DeleteCart= Deleted address success
+success.ChangePassword= Change password success
 
 #Faile message
 failure.DeleteRole= Fail to delete role !
 failure.AddToCart= Fail to add product to cart !
 failure.UpdateQtyToCart= Fail to change quantity of cart !
 failure.DeleteProductFromCart= Fail to delete product from cart !
+failure.ChangePassword= Fail to change new password !
 
