--- a/Ecommerce/src/main/resources/error-messages.properties
+++ b/Ecommerce/src/main/resources/error-messages.properties
@@ -26,6 +26,11 @@ exception.ProductNotFound=Product not found !
 exception.ProductExisted=Product existed !
 exception.database.CanNotAdd=Can not create new product !
 
+# exception liên quan ??n categories
+exception.CategoryNameExisted=Category name is existed !
+exception.CategoryHasProduct=there are products in category !
+exception.CategoryDisable=Category is in inactive status !
+
 # exception liên quan ??n product
 exception.CategoryNotFound=Category not found !
 
